--- a/server.yml
+++ b/server.yml
@@ -8,7 +8,7 @@ Parameters:
     Type: String
 
 Resources:
-  SABSecGroup:
+  LoadBSecGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: allow http to our load balancer
@@ -26,3 +26,21 @@ Resources:
           CidrIp: 0.0.0.0/0
   WebServerSecGroup:
     Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: allow http to our hosts and SSH from local only
+      VpcId:
+        Fn::ImportValue: !Sub "${EnvironmentName}-VPCID"
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: tcp
+          FromPort: 0
+          ToPort: 65535
+          CidrIp: 0.0.0.0/0
