--- a/server.yml
+++ b/server.yml
@@ -46,10 +46,10 @@ Resources:
           CidrIp: 0.0.0.0/0
   
   WebAppLaunchConfig:
-    Type:
+    Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       UserData:
-        fn::Base64: !Sub |
+        Fn::Base64: !Sub |
           #!/bin/bash
           # Install docker
           apt-get update
@@ -63,21 +63,25 @@ Resources:
            apt-get install -y docker-ce
            usermod -aG docker ubuntu
            docker run -p 8080:8080 tomcat:8.0
-      ImageId: ami-005bdb005fb00e791
+      ImageId: ami-0ac73f33a1888c64a
       KeyName: that-one
       SecurityGroups:
       - Ref: WebServerSecGroup
-      InstanceType: t3.medium
+      InstanceType: t3.small
       BlockDeviceMappings:
       - DeviceName: "/dev/sdk"
         Ebs:
-          volumeSize: "10"
+          VolumeSize: '10'
   WebAppGroup:
-
-
-
-
-
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties:
+      VPCZoneIdentifier:
+      - Fn::ImportValue:
+          !Sub "${EnvironmentName}-PRIV-NETS"
+      LaunchConfigurationName:
+        Ref: WebAppLaunchConfig
+      MinSize: '3'
+      MaxSize: '5'
 
 
 
